[tool.poetry]
name = "pyllm"
version = "0.1.0"
description = "A very simple Large Language Model (LLM) library"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
